--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINOverviewCell.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINOverviewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,10 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="overViewID" rowHeight="52" id="xeV-fX-iPe" customClass="SINOverviewCell">
-            <rect key="frame" x="0.0" y="0.0" width="377" height="52"/>
+            <rect key="frame" x="0.0" y="0.0" width="310" height="52"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xeV-fX-iPe" id="tBL-f6-cEJ">
-                <rect key="frame" x="0.0" y="0.0" width="377" height="51.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="310" height="51.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9HK-f1-wGr">
@@ -31,24 +31,24 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="白粥（赠送秘制咸菜）" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZJ-E4-akV">
-                        <rect key="frame" x="23" y="16.5" width="185" height="19.5"/>
+                        <rect key="frame" x="23" y="16.5" width="165" height="19.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="185" id="Acl-dY-vCk"/>
+                            <constraint firstAttribute="width" constant="165" id="Acl-dY-vCk"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="¥20" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1N-e3-ccO">
-                        <rect key="frame" x="218" y="18" width="28" height="18"/>
+                        <rect key="frame" x="188" y="18" width="28" height="18"/>
                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="T1N-e3-ccO" firstAttribute="leading" secondItem="MZJ-E4-akV" secondAttribute="trailing" constant="10" id="L4c-hN-iqU"/>
+                    <constraint firstItem="T1N-e3-ccO" firstAttribute="leading" secondItem="MZJ-E4-akV" secondAttribute="trailing" id="L4c-hN-iqU"/>
                     <constraint firstItem="9HK-f1-wGr" firstAttribute="leading" secondItem="tBL-f6-cEJ" secondAttribute="leading" constant="8" id="Nis-1R-lLq"/>
                     <constraint firstItem="T1N-e3-ccO" firstAttribute="centerY" secondItem="MZJ-E4-akV" secondAttribute="centerY" id="V9y-P8-tdz"/>
                     <constraint firstItem="9HK-f1-wGr" firstAttribute="centerY" secondItem="tBL-f6-cEJ" secondAttribute="centerY" id="WIl-4e-gjL"/>
@@ -60,7 +60,7 @@
                 <outlet property="foodNameLabel" destination="MZJ-E4-akV" id="2vB-er-7ac"/>
                 <outlet property="foodPriceLabel" destination="T1N-e3-ccO" id="4Hu-IX-WlU"/>
             </connections>
-            <point key="canvasLocation" x="-774.5" y="-452"/>
+            <point key="canvasLocation" x="-808" y="-452"/>
         </tableViewCell>
     </objects>
 </document>
