--- a/SinWaiMai/SinWaiMai/Classes/Homepage/View/SINShoppeTableViewCell.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Homepage/View/SINShoppeTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -137,7 +137,7 @@
                 <outlet property="takeOutPriceLabel" destination="Sao-uG-9RE" id="Lrd-CA-nrM"/>
                 <outlet property="welfareContainer" destination="KIO-2V-t64" id="pjz-SQ-VZW"/>
             </connections>
-            <point key="canvasLocation" x="40" y="46"/>
+            <point key="canvasLocation" x="-356.5" y="-25.5"/>
         </tableViewCell>
     </objects>
     <resources>
